<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/eight_dp"
    app:cardCornerRadius="@dimen/eight_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/sixteen_dp">

        <TextView
            android:id="@+id/publish_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publish_on_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/book_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publisher"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ebook_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ebook_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp"
            android:hint="@string/author_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <Button
            android:id="@+id/download_btn"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginHorizontal="@dimen/eight_dp"
            android:text="@string/download"
            android:textAllCaps="false"
            android:visibility="visible"
            app:cornerRadius="@dimen/sixteen_dp" />

        <Button
            android:id="@+id/open_btn"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginHorizontal="@dimen/eight_dp"
            android:text="@string/open"
            android:textAllCaps="false"
            android:visibility="visible"
            app:cornerRadius="@dimen/sixteen_dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
