<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/eight_dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/subject_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_code"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subject_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/faculty_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_teacher"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/four_dp"
        android:layout_marginBottom="@dimen/four_dp"
        android:background="@drawable/background_gradient_dark" />

</LinearLayout>
