<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.library.LibraryActivity">

    <include layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/sixteen_dp">

            <TextView
                android:id="@+id/library_ebook"
                style="@style/DrawableNextTintSecondary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/e_books" />


            <TextView
                android:id="@+id/library_e_magazine"
                style="@style/DrawableNextTintSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_magazine" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="@dimen/eight_dp"
                android:background="@drawable/background_gradient_dark" />

            <TextView
                android:id="@+id/library_my_library"
                style="@style/DrawableNextTintSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_library" />

            <TextView
                android:id="@+id/more_e_books"
                style="@style/DrawableNextTintSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_e_books_txt" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>