<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.clubs.ClubPageActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/club_background"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:contentDescription="@string/background_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/place_holder" />

                <include
                    layout="@layout/profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="@dimen/eight_dp" />


                <TextView
                    android:id="@+id/club_motive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/eight_dp"
                    android:layout_marginEnd="@dimen/eight_dp"
                    android:hint="@string/club_motive"
                    android:paddingStart="@dimen/eight_dp"
                    android:paddingEnd="@dimen/eight_dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/club_motive"
                    android:layout_margin="@dimen/eight_dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/four_dp"
                    android:paddingEnd="@dimen/four_dp"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total_members"
                            android:textAlignment="textStart"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <TextView
                            android:id="@+id/total_members"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/members"
                            android:textAlignment="textStart"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/club_started_on"
                            android:textAlignment="textEnd"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <TextView
                            android:id="@+id/club_started"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/date"
                            android:textAlignment="textEnd"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="@dimen/eight_dp"
                android:background="@drawable/background_gradient_dark" />

            <LinearLayout
                android:id="@+id/is_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/eight_dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/join_date"
                    style="@style/AppTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/join_on_place_holder" />

                <TextView
                    android:id="@+id/club_events"
                    style="@style/DrawableNextTintSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/events" />

                <TextView
                    android:id="@+id/club_members"
                    style="@style/DrawableNextTintSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/members" />

                <TextView
                    android:id="@+id/club_announcements"
                    style="@style/DrawableNextTintSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/announcements" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/is_not_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/eight_dp"
                android:visibility="gone">

                <Button
                    android:id="@+id/join_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/join_now"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/sixteen_dp" />

                <Button
                    android:id="@+id/cancel_request"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_request"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/sixteen_dp" />

            </LinearLayout>

            <Button
                android:id="@+id/leave_club"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:backgroundTint="@color/red"
                android:text="@string/leave"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"
                app:cornerRadius="@dimen/sixteen_dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>