<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/eight_dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/eight_dp">

        <TextView
            android:id="@+id/event_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_topic"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_motive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_motive"
            android:maxLines="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <TextView
            android:id="@+id/event_post_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_post_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />


    </LinearLayout>

</androidx.cardview.widget.CardView>